adds and deletes ingredients
